--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -14,14 +14,28 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="center"
+            android:layout_marginLeft="30dp"
             android:layout_marginBottom="70dp"
             android:layout_marginTop="30dp">
-
-        <SearchView
-                android:id="@+id/serchView"
-                android:queryHint="Search or type web address"
+        <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+        </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edtSearch"
+                android:layout_marginRight="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Search or type web address"/>
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@android:drawable/btn_plus"
+                android:id="@+id/imgSearch"
+                android:layout_weight="1"/>
+
 
     </LinearLayout>
 
@@ -32,23 +46,30 @@
             android:orientation="horizontal"
             android:layout_marginBottom="80dp">
 
+        <androidx.cardview.widget.CardView
+                android:id="@+id/imgCardView"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="30dp"
+                android:layout_gravity="center"
+                app:cardCornerRadius="50dp"
+                android:layout_marginBottom="30dp">
+            <ImageView
+                    android:id="@+id/ivProfileImage"
+                    android:layout_width="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_height="match_parent"/>
+        </androidx.cardview.widget.CardView>
+
         <Button
                 android:background="@mipmap/camera"
                 android:layout_width="75dp"
                 android:layout_height="61dp"
-                android:layout_marginLeft="50dp"
+                android:layout_marginLeft="40dp"
                 android:layout_marginTop="65dp"
                 android:layout_marginRight="50dp"
                 android:id="@+id/btnCamera"/>
-
-        <androidx.cardview.widget.CardView
-                android:id="@+id/imgCardView"
-                android:layout_width="200dp"
-                android:layout_height="201dp"
-                android:layout_gravity="center"
-                app:cardCornerRadius="500dp"
-                android:layout_marginBottom="30dp">
-        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
@@ -63,6 +84,7 @@
                 android:layout_height="50dp"
                 android:hint="Phone Number"
                 android:textAlignment="center"
+                android:inputType="number"
                 android:textSize="20sp"
                 android:layout_marginRight="40dp"
                 android:id="@+id/edtPhone"/>
